--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,11 @@
             </intent-filter>
         </activity>
 
+        <!-- Ocean Select Activity -->
+        <activity
+            android:name=".presentation.main.OceanSelectActivity"
+            android:exported="false" />
+
         <!-- Location Tracking Foreground Service -->
         <service
             android:name=".services.LocationTrackingService"
